# OOP_labworks

./: README.md
Laba1/: CMakeLists.txt
Laba1/include/: solution.h
Laba1/src/: main.cpp  solution.cpp
Laba1/test/: test_solution.cpp
